--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -326,10 +326,7 @@ section.program-guide {
               }
             }
             .letter-paper {
-              position: absolute;
-              bottom: 0;
-              left: 50%;
-              transform: translate(-50%, 65%);
+              @include absolute($l: 50%, $t: 30%);
               width: calc(100% - 50px);
               .letter-paper-bg {
                 display: block;
@@ -345,7 +342,6 @@ section.program-guide {
                 padding: 90px 60px 0;
                 letter-spacing: -0.06em;
                 text-align: left;
-                word-break: keep-all;
                 span {
                   font-weight: 700;
                 }
@@ -385,70 +381,51 @@ section.program-guide {
  */
 section.introduction {
   position: relative;
-  .introduction-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  .introduction-bg-icon {
+    @include absolute(0, 0, 0, 0);
     .circle {
-      position: absolute;
-      right: 0px;
-      top: 50%;
-      transform: rotate(90deg) translateY(-50%);
-      i {
-        display: inline-block;
+      @include absolute($t: 50%, $r: 0);
+      writing-mode: vertical-rl;
+      .match-bg {
         position: relative;
+        display: inline-block;
         font-family: $en;
         text-transform: uppercase;
         font-weight: 700;
         letter-spacing: -0.02em;
-        font-size: 25px;
+        font-size: to-clamp(25px, 15px);
         font-style: italic;
+        padding: 0 min(100px, vw(100px));
       }
       &::before {
         content: '';
         display: inline-block;
-        width: 800px;
+        width: to-clamp(800px);
         background-color: $black;
         aspect-ratio: 1/1;
-        position: absolute;
-        bottom: -70px;
-        left: 50%;
-        transform: translateX(-50%);
+        @include absolute($t: 50%, $l: 0);
         border-radius: 50%;
       }
     }
     .top-left {
-      position: absolute;
-      top: 0;
-      left: 50px;
-      width: 220px;
+      @include absolute($t: 0, $l: to-clamp(50px, 15px));
+      width: to-clamp(220px, 60px);
       aspect-ratio: 1/1;
       &::before,
       &::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
+        @include bg-icon-pseudo-2;
       }
       &::before {
-        background: url(/src/images/section02_01_2.png);
-        background-size: cover;
+        background-image: url(/src/images/section02_01_2.png);
         animation: infinite-rotate 15s infinite linear;
       }
       &::after {
-        background: url(/src/images/section02_01_1.png);
-        background-size: cover;
+        background-image: url(/src/images/section02_01_1.png);
       }
     }
     .bottom-left {
-      position: absolute;
-      left: -60px;
-      bottom: 60px;
-      width: 300px;
+      @include absolute($l: to-clamp(-60px), $b: to-clamp(60px));
+      width: to-clamp(300px, 120px);
       aspect-ratio: 1/1;
       background: url(/src/images/section02_04.png);
       background-size: cover;
@@ -505,12 +482,20 @@ section.introduction {
       text-align: center;
       border: 2px solid $black;
       font-weight: 700;
+      margin-top: 20px;
       .bi {
+        display: inline-block;
+        margin-left: 5px;
         color: inherit;
+        font-size: inherit;
+        -webkit-text-stroke: 1px $black;
       }
       &:hover {
         background-color: $black;
         color: $bg-orange;
+        .bi {
+          -webkit-text-stroke: 1px $bg-orange;
+        }
       }
     }
   }
@@ -598,8 +583,8 @@ section.greeting {
                 width: calc(100% - vw(50px));
 
                 .letter-paper-text {
-                  font-size: max(vw(22px), 15px);
-                  padding: 15% 20%;
+                  font-size: max(vw(22px), 16px);
+                  padding: 15% 13% 0;
                   a {
                     font-size: max(vw(16px), 12px);
                   }
@@ -648,10 +633,10 @@ section.greeting {
         }
       }
       a {
-        font-size: vw(30px);
-        width: vw(300px);
-        height: vw(100px);
-        line-height: vw(100px);
+        font-size: to-clamp(30px, 15px);
+        width: to-clamp(300px, 150px);
+        height: to-clamp(100px, 50px);
+        line-height: to-clamp(100px, 50px);
       }
     }
   }
@@ -672,7 +657,7 @@ section.greeting {
         gap: 30px;
         .letter-item {
           width: 100%;
-          font-size: 18px;
+          font-size: 16px;
           padding: 30px 0;
           .card-header {
             padding: 0 20px;
@@ -710,7 +695,6 @@ section.greeting {
             .letter {
               .letter-paper {
                 .letter-paper-text {
-                  font-size: 18px;
                 }
               }
             }
@@ -781,5 +765,11 @@ section.greeting {
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  section:not(.greeting) {
+    padding-bottom: 60px;
   }
 }
