--- a/pages/includes/footer.html
+++ b/pages/includes/footer.html
@@ -9,9 +9,11 @@
     <footer>
       <div class="footer-inner">
         <div class="copyright-wrap">
-          &copy; 2024 동국대학교 LINC 3.0 사업단<span class="powered-by"
-            >Powered by <b>D.LOFT</b></span
-          >
+          <div class="copyright">
+            &copy; 2024 동국대학교 LINC 3.0 사업단<span class="powered-by"
+              >Powered by <b>D.LOFT</b></span
+            >
+          </div>
           <div class="related-site">
             <span>관련사이트 <i class="bi bi-chevron-up"></i></span>
             <ul class="site-link-list">
