--- a/pages/includes/header.html
+++ b/pages/includes/header.html
@@ -9,14 +9,14 @@
     <header>
       <div class="header-inner">
         <div class="logo">
-          <a href="/index.html"><img src="src/images/logo.png" alt="" /></a>
+          <a href="../../index.html"
+            ><img src="../../src/images/logo.png" alt=""
+          /></a>
         </div>
         <nav class="gnb">
-          <a href="pages/introduction.html">소개</a
-          ><a href="pages/qna.html">Q&A</a
-          ><a href="pages/student.html">학생</a
-          ><a href="pages/teacher.html">교원</a
-          ><a href="pages/industry.html">산업체</a>
+          <a href="../introduction.html">소개</a><a href="../qna.html">Q&A</a
+          ><a href="../student.html">학생</a><a href="../teacher.html">교원</a
+          ><a href="../industry.html">산업체</a>
         </nav>
         <a class="capstone btn-link" href=""
           >캡스톤디자인<i class="bi bi-box-arrow-up-right"></i
@@ -40,19 +40,19 @@
               <a href=""><i>홈</i></a>
             </li>
             <li>
-              <a href="pages/introduction.html"><i>소개</i></a>
+              <a href="../introduction.html"><i>소개</i></a>
             </li>
             <li>
-              <a href="pages/qna.html"><i>Q&A</i></a>
+              <a href="../qna.html"><i>Q&A</i></a>
             </li>
             <li>
-              <a href="pages/student.html"><i>학생</i></a>
+              <a href="../student.html"><i>학생</i></a>
             </li>
             <li>
-              <a href="pages/teacher.html"><i>교원</i></a>
+              <a href="../teacher.html"><i>교원</i></a>
             </li>
             <li>
-              <a href="pages/industry.html"><i>산업체</i></a>
+              <a href="../industry.html"><i>산업체</i></a>
             </li>
           </ul>
           <a class="capstone btn-link" href=""
