--- a/src/styles/introduction.scss
+++ b/src/styles/introduction.scss
@@ -366,10 +366,15 @@ section.course {
       .heading {
       }
       .center-list-wrap {
-        margin: 250px 0;
+        margin: 0;
+        height: 500px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         .center-list-bg-text {
         }
         .center-list {
+          width: 100%;
           li {
             $col-gap: 20px;
             $col: 3;
@@ -419,9 +424,10 @@ section.course {
   }
   section.course {
     .course-bg-icon {
-      i:nth-child(1){
-        top: 12%;
-      }
+      display: none;
+      // i:nth-child(1){
+      //   top: 12%;
+      // }
     }
     table {
       th,
